@@ -15,6 +15,7 @@ Version CVS HEAD (?)
   * src/DLS.cpp, src/DLS.h:
     - added new method File::GetFileName()
     - fixed minor "memory leak on exception" bug found with cppcheck
+    - added new method File::GetExtensionFile(int index)
 
   * src/RIFF.cpp, src/RIFF.h:
     - bugfix: avoid calling read() with count 0 when writing a file,
